fixed footer spacing

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -893,7 +893,7 @@ properly.
 
    .row {
 	   width: 460px;
-	   margin: 0 auto;
+	   /* margin: 0 auto; */
       padding: 0;
 	}
    .column, .columns {
